# Email-Triage-OpenEnv

./: .dockerignore  .gitignore  README.md  demo.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
email_triage_env/: __init__.py  client.py  openenv_env.py
email_triage_env/server/: app.py
server/: __init__.py  app.py
