[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-email-triage"
version = "2.0.0"
description = "Email triage OpenEnv environment"
requires-python = ">=3.10"
dependencies = [
  "openenv-core>=0.2.2",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.0.0",
  "requests>=2.31.0",
  "openai>=1.51.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
server = "server.app:main"

